# claude-code-adapter-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  structured_content_map.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: api.md  configuration.md  development.md  getting-started.md  index.md
docs/en/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  api.md  configuration.md  development.md  getting-started.md  index.md
scripts/: check_env.py  setup.bat  setup.sh  start.py
src/claude_code_adapter/: __init__.py  app.py  config.py  models.py  services.py  utils.py
tests/: test_app.py  test_utils.py
